--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="navs ">
           <a href="#">
             <i class="material-icons hover_navs">
-            home outline
+            home
             </i>
           </a>
         </li>
