--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="author" content="Tarit Jaiswal">
     <title>Scratch- project</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link
     rel="stylesheet"
@@ -56,16 +57,38 @@
     <div>
       <div class="coverimg">
         <div class="border">
+          <span id="heading">Headings comes here!</span>
           <div class="marginTop">
+
             <form>
               <input id="dark-mode" class="toggle" type="checkbox" name="Dark mode" role="switch" value="on">
               <label for="dark-mode" class="sr">Dark Mode</label>
-              <div class="curtain"></div>
+
+              <div class="curtain">
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
             </form>
           </div>
           
         </div>
       </div>
+    </div>
+
+    <div class="content">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
     </div>
 
 
