--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
       <div class="coverimg">
         <div class="border">
           <span id="heading">Headings comes here!</span>
+          <span id="sub-heading"> ahh! don't worry sub heading will come here!</span>
+          <div class="btn_position btn">
+            Hakuna Matata!
+          </div>
           <div class="marginTop">
 
             <form>
@@ -66,7 +70,7 @@
 
               <div class="curtain">
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                <p id="darkText">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -81,7 +85,8 @@
     </div>
 
     <div class="content">
-      <p>
+      <div class="">
+        <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -89,6 +94,7 @@
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
+      </div>
     </div>
 
 
